# open_gl_stuffs

./: CMakeLists.txt  conanfile.txt  imgui_mgr.cpp  imgui_mgr.h  main.cpp
imgui_backend/: imgui_impl_opengl3.cpp
